Added configuration files with `git_helper`

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,3 +5,11 @@ tag = True
 
 [bumpversion:file:setup.py]
 
+[bumpversion:file:git_helper.yml]
+
+[bumpversion:file:__pkginfo__.py]
+
+[bumpversion:file:README.rst]
+
+[bumpversion:file:dummy_wx/__init__.py]
+
