--- a/git_helper.yml
+++ b/git_helper.yml
@@ -21,6 +21,13 @@ python_versions:
   - '3.7'
   - '3.8'
 
+preserve_custom_theme: True
+
+exclude_files:
+  - doc_requirements
+  - conf
+  - rtfd
+
 # travis secure password for PyPI
 #travis_pypi_secure:
 
