Added tox-travis options to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,12 @@ envlist = py36, py37, py38
 skip_missing_interpreters = True
 requires = pip >= 19.0.0
 
+[travis]
+python =
+  3.6: py36, docs
+  3.7: py36
+  3.8: py38
+
 [build-system]
 requires = [
            setuptools >= 46.1.3
