--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps = -r{toxinidir}/tests/requirements.txt
 commands =
     python --version
 ;   Run tests
-    python -m pytest --cov=dummy_wx --reruns 1 --reruns-delay 30 -r aR tests/
+    python -m pytest --cov=wx --reruns 1 --reruns-delay 30 -r aR tests/
 
 
 [testenv:lint]
@@ -36,7 +36,7 @@ deps =
     autopep8 >=1.5.2
     flake8 >=3.8.2
 commands =
-    flake8 dummy_wx
+    flake8 wx
     flake8 tests
 
 [flake8]
