--- a/git_helper.yml
+++ b/git_helper.yml
@@ -1,4 +1,5 @@
 modname: dummy_wx
+import_name: wx
 copyright_years: "2019-2020"
 author: "Dominic Davis-Foster"
 email: "dominic@davis-foster.co.uk"
