--- a/git_helper.yml
+++ b/git_helper.yml
@@ -9,6 +9,7 @@ license: 'LGPLv3+'
 short_desc: 'This module does nothing.'
 
 enable_conda: False
+enable_docs: False
 
 additional_ignore:
   - "**/dist"
