--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,10 @@ requires = pip >= 19.0.0
 
 [travis]
 python =
-  3.6: py36
-  3.7: py36
-  3.8: py38
+    3.6: py36
+    3.7: py37
+    3.8: py38
+
 
 [build-system]
 requires = [
@@ -28,6 +29,16 @@ commands =
 ;   Run tests
     python -m pytest --cov=wx --reruns 1 --reruns-delay 30 -r aR tests/
 
+[testenv:bumpversion]
+skip_install = true
+deps = bump2version
+commands = bumpversion --verbose {posargs}
+
+[testenv:build]
+skip_install = true
+deps = setuptools >= 46.1.3
+       wheel >= 0.34.2
+commands = python setup.py sdist bdist_wheel
 
 [testenv:lint]
 basepython = python3.6
@@ -39,18 +50,17 @@ commands =
     flake8 wx
     flake8 tests
 
+
+[testenv:yapf]
+basepython = python3.6
+skip_install = true
+deps =
+    yapf
+commands =
+    yapf -i wx --recursive
+    yapf -i --recursive tests
+
 [flake8]
 max-line-length = 120
 select = E301 E303 E304 E305 E306 E502 W291 W293 W391 E226 E225 E241 E231 E101 E111 E112 E113 E121 E122 E124 E125 E127 E128 E129 E131 E133 E201 E202 E203 E211 E222 E223 E224 E225 E227 E228 E242 E251 E261 E262 E271 E272 E402 E703 E711 E712 E713 E714 E721 W504 E302 W292 E265
 exclude = .git,__pycache__,doc-source,old,build,dist,make_conda_recipe.py,__pkginfo__.py,setup.py
-
-[testenv:bumpversion]
-skip_install = true
-deps = bump2version
-commands = bumpversion --verbose {posargs}
-
-[testenv:build]
-skip_install = true
-deps = setuptools >= 46.1.3
-       wheel >= 0.34.2
-commands = python setup.py sdist bdist_wheel
