--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist = py36, py37, py38
 skip_missing_interpreters = True
 requires = pip >= 19.0.0
 
+
 [travis]
 python =
     3.6: py36
@@ -19,6 +20,7 @@ requires = [
            wheel >= 0.34.2
            ]
 build-backend = "setuptools"
+
 
 [testenv]
 # Install test requirements
@@ -36,29 +38,58 @@ commands = bumpversion --verbose {posargs}
 
 [testenv:build]
 skip_install = true
+changedir = {toxinidir}
 deps = setuptools >= 46.1.3
        wheel >= 0.34.2
-commands = python setup.py sdist bdist_wheel
+commands = python setup.py {posargs} sdist bdist_wheel
+
 
 [testenv:lint]
 basepython = python3.6
+changedir={toxinidir}
+ignore_errors=true
 skip_install = true
 deps =
     autopep8 >=1.5.2
     flake8 >=3.8.2
-commands =
-    flake8 wx
-    flake8 tests
+commands = flake8 wx tests
 
 
 [testenv:yapf]
+basepython = python3.7
+changedir={toxinidir}
+skip_install = true
+ignore_errors=true
+deps = yapf
+commands = yapf -i --recursive wx tests
+
+
+[testenv:isort]
 basepython = python3.6
 skip_install = true
-deps =
-    yapf
-commands =
-    yapf -i wx --recursive
-    yapf -i --recursive tests
+ignore_errors=true
+changedir={toxinidir}
+deps = git+https://github.com/timothycrosley/isort.git
+commands = isort wx tests
+
+
+[testenv:pyup]
+basepython = python3.6
+
+ignore_errors=true
+changedir={toxinidir}
+deps = git+https://github.com/domdfcoding/pyupgrade-directories.git
+commands = pyup_dirs wx tests --py36-plus --recursive
+
+
+[testenv:qa]
+basepython = python3.6
+skip_install = True
+ignore_errors=true
+whitelist_externals=tox
+changedir={toxinidir}
+commands = tox -e pyup,isort,yapf,lint
+
 
 [flake8]
 max-line-length = 120
