--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,11 +3,10 @@ current_version = 0.2.5
 commit = True
 tag = True
 
-[bumpversion:file:git_helper.yml]
-
 [bumpversion:file:__pkginfo__.py]
 
 [bumpversion:file:README.rst]
 
 [bumpversion:file:wx/__init__.py]
 
+[bumpversion:file:repo_helper.yml]
