--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include LICENSE
 include requirements.txt
 recursive-exclude **/__pycache__ *
 recursive-include wx/ *.pyi
-recursive-include wx/ py.typed
+include wx/py.typed
