--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
+# coding: utf-8
+# This file is managed by 'repo_helper'. Don't edit it directly.
+
 [metadata]
 name = dummy_wx
-description = This module does nothing.
 author = Dominic Davis-Foster
 author_email = dominic@davis-foster.co.uk
 license = GNU Lesser General Public License v3 or later (LGPLv3+)
