--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,24 @@
 ---
 
 language: python
-dist: xenial
+dist: focal
 cache: pip
 python:
   - '3.6'
   - '3.7'
   - '3.8'
 
+arch:
+  - amd64
+  - arm64
 install:
 
   - pip install --upgrade pip
   - pip install tox tox-travis
-  - pip install coveralls coverage_pyver_pragma
+
 
 script:
-  - tox
-after_success:
-  - coveralls
+  - tox -vv
 
 
 stages:
@@ -28,7 +29,20 @@ stages:
 
 
 jobs:
+  allow_failures:
+    - arch: arm64
+
+  exclude:
+    - python: '3.7'
+      arch: arm64
+    - python: '3.8'
+      arch: arm64
+
   include:
+    - stage: test
+      dist: bionic
+      python: 3.8
+
     - stage: deploy_pypi
       python: "3.6"
       script: skip
