--- a/repo_helper.yml
+++ b/repo_helper.yml
@@ -10,6 +10,7 @@ short_desc: 'This module does nothing.'
 
 enable_conda: False
 enable_docs: False
+enable_tests: False
 
 additional_ignore:
   - "**/dist"
