Updated config files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,8 @@
 #     * options
 #     * options.packages.find
 #     * mypy
+#     * options.entry_points
+
 [metadata]
 name = dummy_wx
 author = Dominic Davis-Foster
@@ -15,7 +17,6 @@ long_description_content_type = text/x-rst
 platforms = Windows, macOS, Linux
 url = https://github.com/domdfcoding/dummy_wx
 project_urls =
-    Documentation = https://dummy_wx.readthedocs.io
     Issue_Tracker = https://github.com/domdfcoding/dummy_wx/issues
     Source_Code = https://github.com/domdfcoding/dummy_wx
 classifiers =
@@ -31,7 +32,7 @@ classifiers =
     Topic :: Utilities
 
 [options]
-python_requires = >=3.6
+python_requires = >=3.6.1
 zip_safe = False
 include_package_data = True
 packages = find:
@@ -46,3 +47,4 @@ exclude =
 python_version = 3.6
 namespace_packages = True
 check_untyped_defs = True
+warn_unused_ignores = True
