--- a/.isort.cfg
+++ b/.isort.cfg
@@ -15,12 +15,12 @@ default_section = THIRDPARTY
 ;no_lines_before=LOCALFOLDER
 known_third_party =
     coverage
-    coverage_pyver_pragma
+    coverage-pyver-pragma
     github
     pytest
-    pytest_cov
-    pytest_randomly
-    pytest_rerunfailures
+    pytest-cov
+    pytest-randomly
+    pytest-rerunfailures
     requests
 known_first_party = wx
 remove_redundant_aliases = True
