--- a/tox.ini
+++ b/tox.ini
@@ -165,6 +165,6 @@ exclude_lines =
     if __name__ == .__main__.:
 
 [check-wheel-contents]
-ignore = W002
+ignore = W002,W101
 toplevel = wx
 package = wx
